--- a/src/styles/_icons.scss
+++ b/src/styles/_icons.scss
@@ -1,6 +1,6 @@
 @use 'variables' as *;
 
-// btoast icon styles
+// btoast-js icon styles
 // Default icon container
 .bt-icon {
   display: inline-flex;
