--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,6 +1,6 @@
 
 
-// btoast theme & layout helpers
+// btoast-js theme & layout helpers
 // Assumes Bootstrap 5 utilities are available in the page
 // Imports
 @use 'variables' as *;
