--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 
 
-// btoast SCSS Variables
+// btoast-js SCSS Variables
 // These provide defaults and can be overridden by consumers before compiling.
 
 $bt-icon-size: 1.25rem !default; // size of default toast icons
